Install accelerate from source
This is to pick up the fix for the following issue:
https://github.com/huggingface/transformers/issues/22595

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ rouge_score
 fire
 openai
 git+https://github.com/huggingface/transformers.git
+git+https://github.com/huggingface/accelerate.git
 torch
 sentencepiece
 wandb
